@@ -12,6 +12,10 @@ import java.util.stream.Collectors;
 
 public class MessageFactory {
 
+    private MessageFactory() {
+    }
+
+
     public static GameMessage error(int lobbyId, String reason) {
         Map<String, Object> payload = new HashMap<>();
         payload.put("reason", reason);
@@ -21,14 +25,14 @@ public class MessageFactory {
     public static GameMessage gameState(int lobbyId, GameState gameState) {
         List<Map<String, Object>> players = gameState.getAllPlayers().stream()
                 .map(MessageFactory::mapPlayer)
-                .collect(Collectors.toList());
+                .toList();
+
 
         List<Map<String, Object>> boardTiles = gameState.getBoard().getTiles().stream()
                 .map(MessageFactory::mapTile)
                 .collect(Collectors.toList());
 
         Map<String, Object> payload = new HashMap<>();
-        System.out.println("Current player name: " + gameState.getCurrentPlayer().getNickname() + " ID: " + gameState.getCurrentPlayerId());
         payload.put("currentPlayerId", gameState.getCurrentPlayerId());
 
         // Check if the current player is not alive, advance the turn until an alive player is found
